first official deployment

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,6 @@
 {
   "Home" : "Home",
-  "About": "About Me",
+  "About": "About",
   "Portfolio": "Portfolio",
   "Contact": "Contact",
   "Welcome": "Welcome to my world",
@@ -24,5 +24,71 @@
   "ProblemSolving": "Problem Solving",
   "Communication": "Communication",
   "Teamwork": "Team Work",
-  "Education&ExperienceTitle": "Education & Experience"
+  "Education&ExperienceTitle": "Education & Experience",
+  "Learnmore": "Learn more",
+  "ConcepteurTitle": "Applications designer",
+  "WebDeveloper": "Web Developer",
+  "MobileDeveloper": "Mobile Developer",
+  "WhatIs": "What is",
+  "conceptdesc": "As an application designer, I make sure that every project starts with a solid foundation. This includes analysing requirements, creating technical specifications, and architectural planning. The Web and Mobile Application Designer stands at the confluence of design and development, creating interactive solutions that enhance the user experience on browsers and mobile devices.",
+  "webdevdesc": "As a web developer, I develop interactive applications that run smoothly on a variety of browsers and systems, using modern technologies.",
+  "mobdevdesc": "The mobile developer is at the intersection of user interfaces and performance. They develop robust applications for mobile platforms, offering an exceptional user experience.",
+  "desdesc": "As a designer, I'm responsible for designing attractive and functional visual interfaces, while ensuring the brand's visual identity and the quality of the user experience.",
+  "ServiceA1fstPoint": "Analysis of customer needs ",
+  "ServiceA2ndPoint": "Drafting of technical specifications",
+  "ServiceA3rdPoint": "Architectural planning",
+  "ServiceA4thPoint": "Interactive Conception",
+  "ServiceB1fstPoint": "Reactive development && dev frontend-backend",
+  "ServiceB2ndPoint": "Optimising performance",
+  "ServiceB3rdPoint": "Data security",
+  "ServiceB4thPoint": "API integration",
+  "ServiceC1fstPoint": "Cross-platform development ",
+  "ServiceC2ndPoint": "Performance and optimisation ",
+  "ServiceC3rdPoint": "Integration of native functionalities",
+  "ServiceC4thPoint": "Implementation of an intuitive interface ",
+  "ServiceD1fstPoint": "Design of logos, posters and visual aids  ",
+  "ServiceD2ndPoint": "Design UX/UI",
+  "ServiceD3rdPoint": "Respect for brand identity ",
+  "ServiceD4thPoint": "Responsive Design ",
+  "WhatIProvide": "What I Provide",
+  "ServicesTitle": "My services",
+  "MonParcoursAcademique": "My Academic Career",
+  "What I have done so far": "What I have done so far",
+  "Work Experience": "Work Experience",
+  "CybersecurityAssistant": "Cybersecurity Assistant",
+  "FrontDeveloper": "Frontend Developer",
+  "Nandigium1fstPoint": "Cybersecurity concepts (availability, integrity, confidentiality & evidence) ",
+  "Nandigium2ndPoint": "ISO 27001 standards",
+  "Nandigium3rdPoint": "Creation of a secure network architecture for the company",
+  "Feindy1fstPoint": "Development of a website for sending messages to the company's customers using Mail, whatsApp and SMS.",
+  "Feindy2ndPoint": "Front-end development with Java Server Pages (jsp), Css, Js, JQuery ...",
+  "Feindy3rdPoint": "Backend development with JavaEE (j2ee), Mysql database",
+  "Feindy4thPoint": "Integration of APIs such as JavaMail for sending email via Google's SMTP server, Meta's WhatsApp API for managing WhatsApp messages, and the use of CronJobs for automating mailings...",
+  "Spadon1fstPoint": "redesign of the Spadon website",
+  "Spadon2ndPoint": "Use of Full JavaScript for HTML pages: Creation of dynamic pages entirely generated with JavaScript, without template generators, while integrating custom CSS styles for a fluid, responsive layout.",
+  "portfoliotitle1": "Remote heart rate monitoring system for the elderly",
+  "portfoliodesc1": "For this project, I developed a remote heart rate monitoring system specially designed for the elderly, enabling the patient's ECG to be viewed in real time. The system is based on a MERN Stack architecture (MongoDB, Express, React, Node.js) for data processing and display, and on the MQTT protocol for communication between the sensors and the server. The sensors used include the DHT11 for measuring temperature and humidity, and the AD8232 for capturing ECG signals, all connected via an ESP32 module. The application offers an intuitive user interface developed with React, enabling real-time monitoring of physiological data through an interactive dashboard. In addition to the continuous visualisation of ECG data, the system features an alert mechanism for any anomalies detected in the data collected, ensuring rapid intervention in the event of a problem. Using the MQTT protocol, information from the sensors is transmitted smoothly and efficiently to the server, ensuring stable and reliable communication. This project aims to improve the quality of life of the elderly by offering them remote medical monitoring, while facilitating access by healthcare professionals to accurate, up-to-date data. For more information, here's a: <a style={{ color: 'var(--fist-color)' }}  href=\"https://youtu.be/DiDXGserTGM\" target=\"_blank\"> Youtube Link </a> ",
+  "portfoliotitle2": "Maternity management",
+  "portfoliodesc2": "The management project for a maternity hospital is a web application currently under development, designed to optimise patient management and birth management. Using the MERN Stack, which combines MongoDB, Express, React and Node.js, this system offers an intuitive and responsive interface, allowing users to navigate easily between the various functionalities. Key features include secure authentication for medical staff, ensuring that only authorised users can access sensitive data. An administrator dashboard is also in place for efficient management of patient records, with the ability to view and edit medical information, as well as track births in real time. In addition, the system will enable staff accounts to be managed, ensuring smooth, centralised administration of maternity operations. By integrating these functionalities, this project aims to improve the quality of care offered to patients and simplify administrative processes, thus contributing to a more efficient working environment for medical staff",
+  "portfoliotitle3": "Automatic Message Sending Application for SPADON Customers",
+  "portfoliodesc3": "The automatic messaging application project enables companies to optimise their communication with customers via e-mail and WhatsApp messages. Built using Java EE, the application uses cron jobs to automatically execute classes, ensuring that messages are sent regularly and without manual intervention. To send e-mails, the application integrates Google's SMTP API, ensuring reliable and secure delivery of e-mail communications. At the same time, it uses the Meta for Developers WhatsApp API to facilitate the sending of WhatsApp messages, allowing businesses to reach their customers on the most popular messaging platform. Security is a priority in this project, so we have implemented robust security measures at both the application and Tomcat levels to ensure that all communications are protected from unauthorised access. With this application, companies can automate their interactions, improve customer engagement and optimise their communication processes while ensuring a high level of security.",
+  "portfoliotitle4": "Evaluation of Arithmetic Expressions in C (BNF Grammar)",
+  "portfoliodesc4": "The arithmetic expression evaluation project is an application developed in the C language, aimed at implementing a system capable of analysing and calculating arithmetic expressions while respecting the Backus-Naur Form (BNF) grammar. The system is designed to interpret expressions accurately and efficiently, guaranteeing correct evaluation of operations. The main features of this application include a robust syntactic analysis of expressions, enabling the different arithmetic components to be identified and processed. Expressions are calculated according to operator priority, ensuring that operations are performed in the correct order. In addition, the system includes effective syntax error handling, allowing the user to receive clear messages in the event of invalid entries. This completed project demonstrates a structured and methodical approach to handling arithmetic expressions, providing a solid foundation for any application requiring complex calculations",
+  "portfoliotitle5": "Redesign of the Spadon website",
+  "portfoliodesc5": "The Spadon website redesign project is currently underway, aiming to modernise the interface and improve the user experience. To do this, we're using a full JavaScript approach to HTML page development, creating a custom framework tailored to Spadon's specific needs. The redesign involves a complete overhaul of the site, providing fluid, intuitive navigation while incorporating modern, responsive features. The choice of a customised framework allows us to design bespoke solutions that are optimised for performance and usability, while guaranteeing greater interactivity for users",
+  "letstalk": "Lets Talk",
+  "aboutyour": "About Your",
+  "nextproject": "Next Project",
+  "getintouch": "Get In Touch",
+  "letsdiscuss": "Let's discuss your project",
+  "always":"Available to discuss web & mobile development projects",
+  "partner": "design work or partnerships",
+  "name": "Name",
+  "subject": "Subject",
+  "sendmess": "Send Message",
+  "explore": "Explore my portfolio",
+  "exploretext": " Over the years, I've had the privilege of working on a variety of projects that have enabled me to put into practice and perfect my skills. From conception to completion, each project has been an opportunity to learn and grow. I invite you to discover my portfolio, where you'll find a selection of my most recent work."
+
+
+
 }
