--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,6 +1,6 @@
 {
   "Home" : "Acceuil",
-  "About": "A Propos de Moi",
+  "About": "Propos",
   "Portfolio": "Portfolio",
   "Contact": "Contact",
   "Welcome": "Bienvenue dans mon monde",
@@ -27,5 +27,73 @@
   "ProblemSolving": "Résolution de Problèmes",
   "Communication": "Communication",
   "Teamwork": "Travail d'Equipe",
-  "Education&ExperienceTitle": "Education & Expérience"
+  "Education&ExperienceTitle": "Education & Expérience",
+  "Learnmore": "En savoir plus",
+  "ConcepteurTitle": "Concepteur d'applications",
+  "WebDeveloper": "Développeur web",
+  "MobileDeveloper": "Développeur mobile",
+  "WhatIs": "Qu'est ce qu'un ",
+  "conceptdesc": "En tant que concepteur d'applications, je m'assure que chaque projet démarre avec une fondation solide. Cela inclut l'analyse des besoins, la création des spécifications techniques, et la planification architecturale. Le Concepteur d'applications web et mobile se tient à la confluence du design et du développement, créant des solutions interactives qui améliorent l'expérience utilisateur sur les navigateurs et appareils mobiles.",
+  "webdevdesc": "En tant que développeur web, j'assure le développement d'applications interactives qui fonctionnent de manière fluide sur divers navigateurs et systèmes, en m'appuyant sur des technologies modernes.",
+  "mobdevdesc": "Le développeur mobile est à l'intersection des interfaces utilisateur et de la performance. Il développe des applications robustes pour les plateformes mobiles, offrant une expérience utilisateur exceptionnelle.",
+  "desdesc": "En tant que designer, je suis chargé de concevoir des interfaces visuelles attrayantes et fonctionnelles, tout en veillant à l'identité visuelle de la marque et à la qualité de l'expérience utilisateur.",
+  "ServiceA1fstPoint": "Analyse des besoins clients",
+  "ServiceA2ndPoint": "Rédaction des spécifications techniques",
+  "ServiceA3rdPoint": "Planification architecturale",
+  "ServiceA4thPoint": "Conception Interactive",
+  "ServiceB1fstPoint": "Développement réactif && dev frontend-backend",
+  "ServiceB2ndPoint": "Optimisation des performances",
+  "ServiceB3rdPoint": "Sécurisation des Données",
+  "ServiceB4thPoint": "Intégration d'API",
+  "ServiceC1fstPoint": "Développement cross-platform ",
+  "ServiceC2ndPoint": "Performance et optimisation ",
+  "ServiceC3rdPoint": "Intégration de fonctionnalités natives",
+  "ServiceC4thPoint": "Mise en place d'une interface intuitive",
+  "ServiceD1fstPoint": "Conception de logos, d'affiches et de supports visuels ",
+  "ServiceD2ndPoint": "Design UX/UI ",
+  "ServiceD3rdPoint": "Respect de l'identité de marque ",
+  "ServiceD4thPoint": "Design responsive ",
+  "WhatIProvide": "Ce Que Je Fournis",
+  "ServicesTitle": "Mes services",
+  "MonParcoursAcademique": "Mon Parcours Académique",
+  "What I have done so far": "Ce que j'ai fait jusqu'à présent",
+  "Work Experience": "Expérience Professionnelle",
+  "CybersecurityAssistant": "Assistant Cybersécurité",
+  "FrontDeveloper": "Développeur Frontend",
+  "Nandigium1fstPoint": "Concepts Cybersécurité ( disponibilité, intégrité, confidentialité & preuves )",
+  "Nandigium2ndPoint": "Normes ISO 27001",
+  "Nandigium3rdPoint": "Création d'une architecture réseau sécurisée pour l'entreprise",
+  "Feindy1fstPoint": "Développement d'un site web d'envoi de messages aux clients de l'entreprise de type Mail, whatsApp et SMS",
+  "Feindy2ndPoint": "Développement frontend avec Java Server Pages (jsp), Css, Js, JQuery ...",
+  "Feindy3rdPoint": "Développement backend avec JavaEE (j2ee), Mysql comme base de données",
+  "Feindy4thPoint": "ntégration d'API telles que JavaMail pour l'envoi de mails via le serveur SMTP de Google, l'API WhatsApp de Meta pour la gestion des messages WhatsApp, ainsi que l'utilisation de CronJobs pour l'automatisation des envois... ",
+  "Spadon1fstPoint": "Refonte du site web de Spadon",
+  "Spadon2ndPoint": "Utilisation de Full JavaScript pour les pages HTML : Création de pages dynamiques entièrement générées avec JavaScript, sans générateurs de templates, tout en intégrant des styles personnalisés en CSS pour une mise en page fluide et responsive.",
+  "portfoliotitle1": "Système de suivi du rythme cardiaque à distance pour les personnes âgées",
+  "portfoliodesc1": "Pour ce projet, j'ai développé un système de surveillance à distance du rythme cardiaque spécialement conçu pour les personnes âgées, permettant de visualiser l'ECG du patient en temps réel. Le système repose sur une architecture MERN Stack (MongoDB, Express, React, Node.js) pour le traitement et l'affichage des données, ainsi que sur le protocole MQTT pour la communication entre les capteurs et le serveur. Les capteurs utilisés incluent le DHT11 pour la mesure de la température et de l'humidité, et l'AD8232 pour la capture des signaux ECG, tous connectés via un module ESP32. L'application offre une interface utilisateur intuitive développée avec React, permettant une surveillance en temps réel des données physiologiques à travers un tableau de bord interactif. En plus de la visualisation continue des données ECG, le système est doté d'un mécanisme d'alerte en cas d'anomalies détectées dans les données recueillies, garantissant ainsi une intervention rapide en cas de problème. Grâce au protocole MQTT, les informations des capteurs sont transmises de manière fluide et efficace vers le serveur, assurant une communication stable et fiable. Ce projet vise à améliorer la qualité de vie des personnes âgées en leur offrant une surveillance médicale à distance, tout en facilitant l'accès des professionnels de santé à des données précises et actualisées. Voici une vidéo youtube pour plus d'informations sur le projet: <a style={{ color: 'var(--fist-color)' }}  href=\"https://youtu.be/DiDXGserTGM\" target=\"_blank\"> Lien Youtube </a> ",
+  "portfoliotitle2": "Gestion de maternité",
+  "portfoliodesc2": "Le projet de gestion pour une maternité est une application web en cours de développement, conçue pour optimiser la gestion des patientes et la gestion des naissances. En utilisant le MERN Stack, qui combine MongoDB, Express, React et Node.js, ce système offre une interface intuitive et réactive, permettant aux utilisateurs de naviguer facilement entre les différentes fonctionnalités. Les principales fonctionnalités incluent une authentification sécurisée pour le personnel médical, garantissant que seuls les utilisateurs autorisés peuvent accéder aux données sensibles. Un tableau de bord administrateur est également mis en place pour une gestion efficace des dossiers des patients, avec la possibilité de consulter et de modifier les informations médicales, ainsi que de suivre les naissances en temps réel. En outre, le système permettra de gérer les comptes des membres du personnel, assurant une administration fluide et centralisée des opérations de la maternité. En intégrant ces fonctionnalités, ce projet vise à améliorer la qualité des soins offerts aux patientes et à simplifier les processus administratifs, contribuant ainsi à un environnement de travail plus efficace pour le personnel médical.",
+  "portfoliotitle3": "Application d'Envoi de Messages Automatiques pour Les Clients de SPADON",
+  "portfoliodesc3": "Le projet d'application d'envoi de messages automatiques permet aux entreprises d'optimiser leur communication avec les clients via des messages de type e-mail et WhatsApp. Construit avec Java EE, cette application utilise des tâches cron pour l'exécution automatique des classes, garantissant que les messages sont envoyés de manière régulière et sans intervention manuelle. Pour l'envoi d'e-mails, l'application intègre l'API SMTP de Google, assurant une délivrabilité fiable et sécurisée des communications par e-mail. En parallèle, elle utilise l'API WhatsApp de Meta for Developers pour faciliter l'envoi de messages WhatsApp, permettant aux entreprises de toucher leurs clients sur la plateforme de messagerie la plus populaire. La sécurité est une priorité dans ce projet ; ainsi, nous avons mis en place des mesures de sécurité robustes, tant au niveau de l'application qu'au niveau de Tomcat, garantissant que toutes les communications sont protégées contre les accès non autorisés. Grâce à cette application, les entreprises peuvent automatiser leurs interactions, améliorer l'engagement client et optimiser leur processus de communication tout en assurant un haut niveau de sécurité.",
+  "portfoliotitle4": "Évaluation d'Expressions Arithmétiques en C (Grammaire BNF)",
+  "portfoliodesc4": "Le projet d'évaluation d'expressions arithmétiques est une application développée en langage C, visant à implémenter un système capable d\\'analyser et de calculer des expressions arithmétiques tout en respectant la grammaire Backus-Naur Form (BNF). Ce système est conçu pour interpréter les expressions de manière précise et efficace, garantissant une évaluation correcte des opérations. Les principales fonctionnalités de cette application incluent une analyse syntaxique robuste des expressions, permettant d\\'identifier et de traiter les différentes composantes arithmétiques. Le calcul des expressions est effectué en suivant la priorité des opérateurs, ce qui assure que les opérations sont exécutées dans le bon ordre. De plus, le système inclut une gestion efficace des erreurs de syntaxe, permettant à l'utilisateur de recevoir des messages clairs en cas d'entrées invalides. Ce projet, déjà achevé, démontre une approche structurée et méthodique dans le traitement des expressions arithmétiques, offrant ainsi une base solide pour toute application nécessitant des calculs complexes.",
+  "portfoliotitle5": "Refonte du Site Web de Spadon",
+  "portfoliodesc5": "Le projet de refonte du site web de Spadon est actuellement en cours, visant à moderniser l'interface et à améliorer l'expérience utilisateur. Pour ce faire, nous utilisons une approche Full JavaScript pour le développement des pages HTML, en créant un framework personnalisé adapté aux besoins spécifiques de Spadon. Cette refonte implique la restructuration complète du site, permettant une navigation fluide et intuitive, tout en intégrant des fonctionnalités modernes et réactives. Le choix d’un framework personnalisé nous permet de concevoir des solutions sur mesure, optimisées pour la performance et la convivialité, tout en garantissant une meilleure interactivité pour les utilisateurs.",
+  "letstalk": "Parlons",
+  "aboutyour": "De Votre",
+  "nextproject": "Prochain Projet",
+  "getintouch": "Prendre Contact",
+  "letsdiscuss": "Discutons de votre projet",
+  "always": "Disponible pour discuter de projets de développement web & mobile",
+  "partner": "les travaux de conception ou les partenariats",
+  "name": "Prénom & Nom",
+  "subject": "Objet",
+  "sendmess": "Envoyer Message",
+  "explore": "Explorer mon portfolio",
+  "exploretext": " Au fil des années, j'ai eu le privilège de travailler sur divers projets qui m'ont permis de mettre en pratique et de perfectionner mes compétences. De la conception à la réalisation, chaque projet a été une opportunité d'apprentissage et de croissance. Je vous invite à découvrir mon portfolio, où vous trouverez une sélection de mes travaux les plus récents."
+
+
+
+
+
 }
